av1decoder: No longer decode av1-1-b8-22-svc-L1T2
While testing current branch on MTK8195 V4L2 driver, I notice that we had a regression on av1-1-b8-22-svc-L1T2 fluster test. I haven't had time to fully investigate yet, but commenting out that following check fixes the issue:
+#if 0
if (priv->current_picture->temporal_id > self->highest_spatial_layer) {
ret = GST_FLOW_ERROR;
GST_VIDEO_DECODER_ERROR (self, 1, STREAM, DECODE,
@@ -720,6 +721,7 @@ gst_av1_decoder_handle_frame (GstVideoDecoder * decoder,
self->highest_spatial_layer), (NULL), ret);
goto out;
}
+#endif
In practice, it fails on the very first decode, which leave me wonder if we didn't screw up the initialization of self->highest_spatial_layer
or if we didn't mean to check >=
.